# devsetgo_lib

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  404.html  ADD_AI_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_VERSIONING_MIGRATION.md  IMPROVEMENTS.md  README.md  bumpcalver-history.json  calendar_functions.html  codes.py  contribute.html  coverage.xml  ex.py  file_functions.html  folder_functions.html  gen_redirects.py  gen_ref_nav.py  index.html  json_example.py  latest  log.py  log_example.py  logging.html  makefile  makefile_old  makefile_two  mkdocs.yml  objects.inv  pyproject.toml  quickstart.html  regex.html  report.xml  requirements.txt  setup.cfg  setup.py  (+3 more)
.bumpcalver/backups/: 20260315_193542_053_pyproject.toml  20260629_165824_257___init__.py  20260629_165824_257_pyproject.toml  20260629_170417_715_makefile  20260629_170417_716___init__.py  20260629_171313_618_makefile  20260629_171313_619___init__.py  20260629_171313_619_pyproject.toml  20260705_011800_359_makefile  20260705_011800_360___init__.py  20260705_011800_360_pyproject.toml  20260723_215733_652_makefile  20260723_215733_654___init__.py
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: autofill_pullrequest.yml  build_mkdocs.yml  deploy-docs.yml  draft.yml  latest-changes.yml  pythonpackage.yml  pythonpublish.yml  release-drafter.yaml  release-notes.jinja2  sonarcloud.yml  testing.yml
2025.10.4.2/: 404.html  index.html
2025.10.4.2/about/: index.html
2025.10.4.2/contribute/: index.html
2025.10.4.2/print_page/: index.html
2025.10.4.2/quickstart/: index.html
2025.10.4.2/release-notes/: index.html
2025.10.4.2/search/: search_index.json
2025.5.4.1/contribute/: index.html
2025.5.4.1/mike-quickref/: index.html
2025.5.4.1/print_page/: index.html
2025.5.4.1/quickstart/: index.html
2025.5.4.1/release-notes/: index.html
2025.5.4.1/versioning/: index.html
2025.8.9.1/: 404.html  index.html  objects.inv
2025.8.9.1/about/: index.html
2025.8.9.1/contribute/: index.html
2025.8.9.1/print_page/: index.html
2025.8.9.1/quickstart/: index.html
2025.8.9.1/release-notes/: index.html
2025.8.9.1/search/: search_index.json
2026.3.15.1/: 404.html  index.html  objects.inv
2026.3.15.1/about/: index.html
2026.3.15.1/contribute/: index.html
2026.3.15.1/nodejs-npx-setup/: index.html
2026.3.15.1/print_page/: index.html
2026.3.15.1/quickstart/: index.html
2026.3.15.1/release-notes/: index.html
2026.3.15.1/search/: search_index.json
2026.6.29.3/: 404.html  index.html
2026.6.29.3/nodejs-npx-setup/: index.html
2026.6.29.3/print_page/: index.html
2026.6.29.3/quickstart/: index.html
2026.6.29.3/release-notes/: index.html
2026.6.29.3/search/: search_index.json
2026.7.23.1/: 404.html  index.html  objects.inv
2026.7.23.1/about/: index.html
2026.7.23.1/ai_assistant_integration/: index.html
2026.7.23.1/contribute/: index.html
2026.7.23.1/nodejs-npx-setup/: index.html
2026.7.23.1/print_page/: index.html
2026.7.23.1/quickstart/: index.html
2026.7.23.1/release-notes/: index.html
2026.7.23.1/search/: search_index.json
2026.7.4.1/about/: index.html
2026.7.4.1/contribute/: index.html
2026.7.4.1/print_page/: index.html
2026.7.4.1/release-notes/: index.html
2026.7.4.1/search/: search_index.json
__archive/zzz/: conftest.py  e.py  test_async_database.py  test_base_schema.py  test_calendar_functions.py  test_http_codes.py  test_logging_config.py  (+7 more)
about/: index.html
calendar_functions/: index.html
common_functions/: index.html
contribute/: index.html
devsetgo_lib/: file_functions.py  folder_functions.py  logging_config.py  patterns.py
docs/: Makefile  ai_assistant_integration.md  calendar_functions.md  conf.py  contribute.md  file_functions.md  folder_functions.md  index.md  index.rst  installation.rst  logging.md  make.bat  nodejs-npx-setup.md  quickstart.md  regex.md  release-notes.md  usage.rst
dsg/: logging_config.py
dsg_lib/: __init__.py  _all_codes.py  ai_instructions.py  async_database.py  base_schema.py  calendar_functions.py  database_config.py  database_operations.py  file_functions.py  folder_functions.py  http_codes.py  logger.py  logging_config.py  patterns.py  system_health_endpoints.py
examples/: async_file_example.py  cal.py  cal_example.py  csv_example.py  csv_example_with_timer.py  csv_examples.py  database_example.py  fastapi_example.py  file_monitor.py  folder_example.py  json_example.py  log.py  log_example.py  pattern.py  pattern_example.py  text_example.py  text_examples.py  validate_emails.py
file_functions/: index.html
flake8_report/: report.txt
folder_functions/: index.html
full_library_example/: index.html
http_codes/: index.html
logging/: index.html
print_page/: index.html
quickstart/: index.html
reference/: index.html
regex/: index.html
release-notes/: index.html
scripts/: changelog.py  changes.json  clear_pycache.sh  deploy_docs.py  install.sh  migrate_legacy_docs.py  mkdocs.sh  reinstall_requirements.sh  setup-nodejs-remote.sh  setup-nodejs-wsl.sh  tests.sh  update_docs.py
search/: search_index.json
speedtest/: loop.py
system_health_endpoints/: index.html
tests/: conftest.py  e.py  sample_data_for_tests.py  test_ai_instructions.py  test_async_database.py  test_base_schema.py  test_calendar_functions.py  test_db_config.py  test_file_functions.py  test_file_functions_create.py  test_file_functions_process.py  test_file_functions_zprocess_delete.py  test_folder_functions.py  test_http_codes.py  test_logging_config.py  test_pattern_between.py  test_system_health_endpoints.py  test_zfolder_functions.py  xtest_file_functions_create.py
unreleased/: __tools_endpoint.py  _converters.py  email_functions.py  log_example_structlog.py  logging_config_structlog.py  models.py  pdf_margin.py  pdf_processing.py  pdf_script.py  setup.cfg  struct_log_config.py  system_tools_endpoints.py  test_system_tool_endpoints.py  user_lib.py
(+319 files in other folders)
