[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[metadata]
description-file = README.md

[flake8]
max-line-length=88
ignore = E302
exclude = .git,__pycache__,docs,build,tests,_venv,htmlcov,scripts,.pytest_cache,.vscode,

[tool:isort]
force_single_line=True
# virtual_env=_venv
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
# line_length=120
# known_first_party=pytest_cov
# default_section=THIRDPARTY
# forced_separate=test_pytest_cov

[coverage:run]
source=app/*
omit=setup.py, _venv/*,tests/*
[coverage:report]
exclude_lines =
    if __name__
    def main

[tool:pytest]
norecursedirs=/tests
testpaths = tests
python_files = test_*.py
addopts =
    # -p no:warnings
    --cov=./ --cov-report html
    --cov-report xml
    -ra
    --strict
    --tb=short
    -p pytester